-
Bug
-
Resolution: Fixed
-
P1: Critical
-
5.15.16, 6.8
-
-
2862cdb7b (dev), ed96f3bd2 (6.7), 6c16bf0c6 (6.6), dcae60f1e (tqtc/lts-6.5), ca6af3cf7 (tqtc/lts-6.2), 87a777f20 (tqtc/lts-5.15)
To reproduce:
- disable touch device through "xinput disable X"
- start any application
- enable touch device "xinput enable X"
- touch something in the app
This started to happen on Ubuntu 20.04 with kernel 5.15.0-97 -> 5.15.0-100 upgrade which seems to have changed behavior. Now the device is floated when it is disable where as before it seems to have been kept in tree.
I am not sure yet if this also affects Qt 6, but it seems likely. Also same disable behavior seems to happen with latest kernels too (but I cannot test this now) so this doesn't seem to be specific to just those kernels.
#0 0x00007f3435c005aa in QRectF::center (this=<optimized out>) at ../../../../include/QtCore/../../src/corelib/tools/qrect.h:712 #1 QXcbConnection::xi2ProcessTouch (this=<optimized out>, xiDevEvent=0x7f3430006eb0, platformWindow=<optimized out>) at qxcbconnection_xi2.cpp:696 #2 0x00007f3435c0282e in QArrayData::data (this=0x0) at ../../../../include/QtCore/../../src/corelib/tools/qarraydata.h:61 #3 QTypedArrayData<QXcbConnection::TouchDeviceData::ValuatorClassInfo>::data (this=0x0) at ../../../../include/QtCore/../../src/corelib/tools/qarraydata.h:208 #4 QTypedArrayData<QXcbConnection::TouchDeviceData::ValuatorClassInfo>::begin (this=0x0) at ../../../../include/QtCore/../../src/corelib/tools/qarraydata.h:211 #5 QVector<QXcbConnection::TouchDeviceData::ValuatorClassInfo>::realloc (this=0x7f3430006eb0, aalloc=<optimized out>, options=...) at ../../../../include/QtCore/../../src/corelib/tools/qvector.h:708 #8 0x00007f343a102a86 in QList<bool (*)(void**)>::node_copy (this=0x555aa55d6060, src=<optimized out>, to=<optimized out>, from=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qlist.h:516 #9 QList<bool (*)(void**)>::detach_helper_grow (this=0x555aa55d6060, i=32564, c=-943488256) at ../../include/QtCore/../../src/corelib/tools/qlist.h:805 #10 0x00007f3435bcd4db in QXcbConnection::handleXcbEvent (this=<optimized out>, event=0x23) at qxcbconnection.cpp:652
For Gerrit Dashboard: QTBUG-123554 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
550146,3 | xcb: try to repopulate xinput2 devices when needed | dev | qt/qtbase | Status: MERGED | +2 | 0 |
550670,2 | xcb: try to repopulate xinput2 devices when needed | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
550783,2 | xcb: try to repopulate xinput2 devices when needed | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
550825,2 | xcb: try to repopulate xinput2 devices when needed | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
575827,2 | xcb: try to repopulate xinput2 devices when needed | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
575981,2 | xcb: try to repopulate xinput2 devices when needed | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |