xcb: try to repopulate xinput2 devices when needed

And try to not call Q_ASSERT() to avoid crash.

Fixes: QTBUG-123554
Change-Id: I9443c5f0ab4ca7a858df9b328f517b48ab8f122d
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 2862cdb7ba22cc99d1db158888ba0bb32c47e8e8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit ed96f3bd2f76c7c6b86ffeaaf0083cdec53fff18)
(cherry picked from commit 6c16bf0c60626783a7043f08630f7ae48cee9cc3)